[package]
name = "ld47_keep_inside"
version = "0.3.6-dev"
authors = ["David Bernard"]
description = """My game for Ludum Dare 47"""
#readme = "README.md"
license = "CC0-1.0"
repository = "https://github.com/davidB/ld47_keep_inside"
homepage = "https://github.com/davidB/ld47_keep_inside"
edition = "2018"

[features]
default = [
    # "bevy/bevy_audio",
    # "bevy/bevy_dynamic_plugin",
    # "bevy/bevy_gilrs",
    # "bevy/bevy_gltf",
    "bevy/bevy_winit",
    # "bevy/hdr",
    # "bevy/mp3",
    "bevy/png",
    "bevy/render",
]
native = [
    "bevy/bevy_wgpu",
]
web = [
    # "bevy_webgl2",
]

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", default-features=false}
bevy_prototype_lyon = { git = "https://github.com/vleue/bevy_prototype_lyon" }
winit = "0.24.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2"}

[patch.'https://github.com/bevyengine/bevy']
bevy = {git = "https://github.com/bevyengine/bevy//", rev="841755aaf23acfd55b375c37390daeb302c5b30b", default-features=false}

[patch.'https://github.com/mrk-its/bevy_webgl2']
bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2//", rev="035236b8d7ec52b8e9e20399662e89c73e4521f6", default-features=false}

# Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
[profile.dev]
opt-level = 3
debug = false

# But compile the project itself in debug mode if `--release` is not passed in
[profile.dev.package.ld47_keep_inside]
opt-level = 1
debug = true

# see https://github.com/johnthagen/min-sized-rust
[profile.release]
# Enables link time optimizations which tells the compiler to optimize code generation at link time and can result in dropping code that is not used.
lto = true
# Stops Rust generating a helpful stack trace and panic message when it panics. With this optimization it will be much harder to figure out what went wrong when the program crashes.
panic = 'abort'
# Tells the compiler to optimize for minimal code size. This will make the code less performant but it will take up less space.
opt-level = 'z'
# Tells the compiler to use only one code generator instead of running several in parallel. Disabling parallel code generation makes the compilation slower but makes all optimizations possible.
codegen-units = 1

